--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,11 @@
   margin: 0 20px;
 }
 
-.App-nav-item a {
+.App-nav-item span {
   cursor: pointer;
 }
 
-.App-nav-item a:hover {
+.App-nav-item span:hover {
   color: #999;
 }
 
